2011-12-12  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/Tools.pm
	util/pandora_db.pl: Moved is_policy_module function from
	db script to Enteprise and call it through enterprise hook

2011-12-05 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* pandora_server_upgrade: Removed rm of pandora_exec and 
	pandora_server and changed for ln -s commands.
	
	Fixes: #3451305

2011-12-01 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* lib/PandoraFMS/NetworkServer.pm
	 lib/PandoraFMS/WMIServer.pm
	 lib/PandoraFMS/PluginServer.pm
	 lib/PandoraFMS/PredictionServer.pm: Fixed os_version  when an agent 
	 is updated.
	 
	 Fixes: #3314285 

2011-12-01 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* lib/PandoraFMS/DB.pm
	lib/PandoraFMS/Core.pm: Added new function db_concat and added 
	compatibility with postgreSQL and Oracle in function 
	pandora_get_module_tags.

2011-11-29 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* util/pandora_manage.pl: Added some checks that I forget in my 
	last commit.

2011-11-29 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* util/pandora_manage.pl: Added checks of agent and module names at
	creation time.
	
	Fixes: #3439878

2011-11-26  Junichi Satoh <junichi@rworks.jp>

	* FreeBSD/pandora_server.conf: Synchronized with the generic
	configuration file, conf/pandora_server.conf (removed checksum token).

2011-11-23 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* lib/PandoraFMS/NetworkServer.pm: Fixed snmp v3 call in server.

	Fixes: #3429360

2011-11-22 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* lib/PandoraFMS/ReconServer.pm: Fixed assignation of module 
	templates when a recon task creates modules.

2011-11-22 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed a problem with keepalive module 
	(never goes down).
	
	Fixed: #3438849 

2011-11-21 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* lib/PandoraFMS/Core.pm: Changed tag field in events insertion from