@@ -1,5 +1,5 @@
 package: pandorafms-server
-Version: 4.0
+Version: final
 Architecture: all
 Priority: optional
 Section: admin
