@@ -41,8 +41,8 @@ our @EXPORT = qw(
 	);
 
 # version: Defines actual version of Pandora Server for this module only
-my $pandora_version = "4.0";
-my $pandora_build = "110923";
+my $pandora_version = "final";
+my $pandora_build = "111213";
 our $VERSION = $pandora_version." ".$pandora_build;
 
 # Setup hash
