@@ -1,3 +1,11 @@
+2011-12-13  Ramon Novoa  <rnovoa@artica.es>
+
+	* DEBIAN/control,
+	  DEBIAN/make_deb_package.sh,
+	  pandora_server.spec,
+	  lib/PandoraFMS/Config.pm,
+	  lib/PandoraFMS/Core.pm: Updated version strings.
+
 2011-12-12  Sergio Martin <sergio.martin@artica.es>
 
 	* lib/PandoraFMS/Tools.pm
